--- a/dashboard/src/component/atom/TabsView/style.module.css
+++ b/dashboard/src/component/atom/TabsView/style.module.css
@@ -1,51 +1,65 @@
 .tabs__view {
-    width: 100%;
     height: 100%;
     background-color: #1e1e1e;
+    border-radius: 5px;
+    border: 1px solid #2b2b2b;
 }
 
+.tabs__view :global(.row) {
+    height: 100%;
+    justify-content: stretch;
+}
+
+/* Tab list */
 .tabs__view [role="tablist"] {
-    height: 40px;
-    flex-wrap: nowrap !important;
-    overflow-x: auto;
+    height: 100%;
+    align-content: flex-start;
+    background-color: #474747;
+}
+
+.tabs__view :global(.nav-item) {
+    width: 100%;
 }
 
 .tabs__view [role="tab"] {
-    min-width: 100px;
-}
-
-.tabs__view [role="tabpanel"] {
-    width: 100%;
-    height: calc(100% - 40px);
-    overflow-y: auto;
-}
-
-.tabs__view :global(.nav-tabs) {
-    border-bottom: 1px solid #474747 !important;
+    display: block;
+    min-height: 50px;
+    font-weight: bolder;
+    text-align: center;
+    border-radius: 0;
+    outline: none;
 }
 
 /* Inactive tab */
-.tabs__view nav > a {
-    color: #c8c8c8;
-    background-color: #474747;
+.tabs__view :global(.nav-item) > a {
+    color: white;
+    background-color: #474747 !important;
     transition: all 0.2s ease-in;
 }
 
-.tabs__view nav > a:hover {
-    background-color: #666666;
-}
-
-/* Active tab */
-.tabs__view nav > :global(a.active),
-.tabs__view nav > :global(a.active):hover,
-.tabs__view nav > :global(a.active):focus {
-    color: #474747 !important;
+.tabs__view :global(.nav-item) > a:hover {
     background-color: #1e1e1e !important;
 }
 
-/* Disabled tab */
-.tabs__view ul > li.disabled > a {
-    background-color: lightgray;
-    color: darkgray;
+/* Active tab */
+.tabs__view :global(.nav-item) > :global(a.active),
+.tabs__view :global(.nav-item) > :global(a.active):hover,
+.tabs__view :global(.nav-item) > :global(a.active):focus {
+    cursor: default;
+    color: white;
+    background-color: #1e1e1e !important;
 }
 
+/* Tab content */
+.tabs__view [role="tabpanel"] {
+    width: 97%;
+    margin: 0 auto;
+}
+
+@media screen and (max-width: 1200px) {
+    .tabs__view [role="tab"] {
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+    }
+}
